web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-return/output.txt
[SyntaxError]: return not in function (4,5)
4|    return this;
 |   ^
